--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "5.2.*",
         "twbs/bootstrap": "^3.3",
         "components/jquery": "^1.12",
+        "components/jqueryui": "^1.11",
         "laravelcollective/html": "5.2.*"
     },
     "require-dev": {
