--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "twbs/bootstrap": "^3.3",
-        "components/jquery": "^1.12",
-        "components/jqueryui": "^1.11",
-        "laravelcollective/html": "5.2.*",
-        "jasny/bootstrap": "3.1.*"
+        "laravelcollective/html": "5.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,7 +18,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app/Models"
         ],
         "psr-4": {
             "App\\": "app/"
